# zkp-slingshot-example

./: .gitignore  Cargo.toml  Readme.md  run  setup
src/: circuit.rs  keys.rs  main-sdk.rs  main.rs  tx.rs  utils.rs  verify.rs
