[package]
name = "zkp-slingshot-example"
version = "0.1.0"
authors = ["makevoid <makevoid@gmail.com>"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "1.0.1", features = ["serde"] }
token = { path = "vendor/slingshot/token" }
zkvm  = { path = "vendor/slingshot/zkvm" }
musig = { path = "vendor/slingshot/musig" }
merlin = "1.0.1"
rand = "0.6"
rand_os = "0.1.3"


# bulletproofs = "1.0.2"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]
